<resources>
    <string name="app_name">Silungkang Playground (Mobile)</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="recovery_account"><u>Recovery Account</u></string>
    <string name="need_help">Need help?</string>
    <string name="password">Password</string>
    <string name="abuabdillah">abuabdillah</string>
    <string name="welcome_back_sign_in_with_your_existing_silungkang_playground_account">Welcome back, sign in with your existing <b>Silungkang Playground</b> account</string>
    <string name="silungkang_playground">Silungkang Playground</string>
    <string name="event">Event</string>
    <string name="playground">Playground</string>
    <string name="voucher">Voucher</string>
    <string name="info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ends_30_11_2023_cafe">Ends 30/11/2023 - Cafe</string>
    <string name="_100_000">100.000</string>
    <string name="reward_npoints">Reward\nPoints</string>
    <string name="_17">17</string>
    <string name="_3">3</string>
    <string name="active_nvoucher">Active\nVoucher</string>
    <string name="tukarkan_15_points">Tukarkan 15 Points</string>
    <string name="tukar">Tukar</string>
    <string name="_250_000">250.000</string>
    <string name="voucher_aktif">Voucher Aktif</string>
    <string name="tukar_points">Tukar Points</string>
    <string name="ends_27_10_2023_playground">Ends 27/10/2023 - Playground</string>
    <string name="tukarkan_30_points">Tukarkan 30 Points</string>
    <string name="expired_date_with_voucher_type">Ends %1$s - %2$s</string>
    <string name="response_not_success">Terjadi kesalahan pada response..</string>
    <string name="usename_atau_password_tidak_boleh_kosong">Usename atau password tidak boleh kosong…</string>
    <string name="member_id">Member Id</string>
    <string name="pilih_penukaran_voucher">Pilih Penukaran Voucher</string>
    <string name="selamat">Selamat!</string>
    <string name="poin_anda_berhasil_ditukar_dengan_nvoucher_nikmati_berbelanja_di_nsilungkang_playground">Poin anda berhasil ditukar dengan\nvoucher. Nikmati berbelanja di\nSilungkang Playground.</string>
    <string name="ok">OK</string>
    <string name="dapatkan_poin_setiap_kali_bermain_di_nsilungkang_playground_terima_kasih">Dapatkan poin setiap kali bermain di\nSilungkang Playground. Terima kasih.</string>
    <string name="bagaimana_pengalaman_di_nplayground_hari_ini">Bagaimana pengalaman\nkunjungan terkahir Anda di Silungkang Playground?</string>
    <string name="submit">Submit</string>
    <string name="kritik_dan_saran">Kritik dan saran :</string>
    <string name="riwayat"><u>Riwayat</u></string>
    <string name="creative_corner">Creative Corner</string>
    <string name="tahfiz_untuk_nanak">Tahfiz untuk\nAnak</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="school_visit">School Visit</string>
    <string name="group_visit">Group Visit</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="wahana">Wahana</string>
    <string name="review">Review</string>
    <string name="tanggal_awal">Tanggal Mulai\t\t\t: %1$s</string>
    <string name="tanggal_berakhir">Tanggal Berakhir\t\t: %1$s</string>
    <string name="daftar">Daftar</string>
    <string name="playground_event">Playground Event</string>
    <string name="tahfiz_untuk_anak">Tahfiz untuk\nAnak</string>
    <string name="magenetik_drawing_board">Magenetik\nDrawing Board</string>
    <string name="puzzle_tetris">Puzzle\nTetris</string>
    <string name="_0">0</string>
    <string name="no">No.</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggal">Tanggal</string>
    <string name="tidak_ada_voucher_yang_aktif">Tidak ada voucher yang aktif..</string>
    <string name="operational_hours">Operational Hours</string>
    <string name="operational_hours_time">%1$s - %2$s WIB</string>
    <string name="harga_ticket">Harga Ticket</string>
    <string name="harga_tiket_sudah_termasuk_1_orang_pendamping">Harga tiket sudah termasuk 1 orang pendamping</string>
    <string name="senin_kamis">%1$s - %2$s</string>
    <string name="ticket_day_price_format">: Rp. %1$s,-</string>
    <string name="hari_libur">Hari Libur</string>
    <string name="riwayat_kosong">Riwayat kosong..</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="kartu_member">Kartu Member</string>
    <string name="tidak_kartu_member_yang_ditemukan">Tidak kartu member yang ditemukan..</string>
    <string name="exchange_point_info_format">%1$s - %2$s point</string>
    <string name="logout">Logout</string>
    <string name="anda_telah_logout">Anda Telah Logout..</string>
    <string name="maaf_terjadi_kesalahan">Maaf, Terjadi Kesalahan..</string>
    <string name="anda_sekarang_login_sebagai">Anda sekarang login sebagai %1$s</string>
    <string name="apakah_anda_yakin_ingin_menukar_point_dengan_voucher_terpilih">Yakin ingin menukar\npoint dengan\nvoucher terpilih?</string>
    <string name="batal">Batal</string>
    <string name="ya">Ya</string>
    <string name="terima_kasih">Terima Kasih!</string>
    <string name="feedback_anda_sangat_membantu_kami_nuntuk_dapat_terus_meningkatkan_nlayanan_kami">Feedback anda sangat membantu kami\nuntuk dapat terus meningkatkan\nlayanan kami.</string>
    <string name="muat_lagi">Muat Lagi..</string>
</resources>