<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPaddingTop="14dp"
    app:contentPaddingBottom="22dp"
    app:strokeWidth="0dp"
    app:cardCornerRadius="20dp"
    app:contentPaddingLeft="38dp"
    app:cardBackgroundColor="@color/white"
    app:contentPaddingRight="38dp"
    tools:context=".presentation.feature.feedback.FeedbackAppreciationDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView.Black.16sp.SemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terima_kasih"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView.Black.10sp.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:letterSpacing="0.03"
            android:text="@string/feedback_anda_sangat_membantu_kami_nuntuk_dapat_terus_meningkatkan_nlayanan_kami"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acb_ok"
            style="@style/Button.12sp.Medium"
            android:layout_width="47dp"
            android:layout_height="27dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="@string/ok"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>