<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarSize="1dp"
    tools:context=".presentation.feature.login.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:paddingTop="68dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="-50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/login_icon"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="18dp"
            android:text="@string/welcome_back_sign_in_with_your_existing_silungkang_playground_account"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/purple_100"
            app:layout_constraintEnd_toEndOf="@id/aciv_icon"
            app:layout_constraintStart_toStartOf="@id/aciv_icon"
            app:layout_constraintTop_toBottomOf="@id/aciv_icon" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/acet_hp_number"
            style="@style/EditText.12sp.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/nomor_hp"
            android:maxLength="14"
            android:maxLines="1"
            tools:text="6281356279295"
            android:digits="0123456789"
            app:layout_constraintEnd_toEndOf="@id/actv_info"
            app:layout_constraintStart_toStartOf="@id/actv_info"
            app:layout_constraintTop_toBottomOf="@id/actv_info" />

        <id.rla.silungkangplayground.presentation.customview.CustomEditTextPassword
            android:id="@+id/acet_password"
            style="@style/EditText.12sp.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            tools:text="abuabdillah"
            app:layout_constraintEnd_toEndOf="@id/actv_info"
            app:layout_constraintStart_toStartOf="@id/actv_info"
            app:layout_constraintTop_toBottomOf="@id/acet_hp_number" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            style="@style/Button.12sp.Medium"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/acet_password"
            app:layout_constraintStart_toStartOf="@id/acet_password"
            app:layout_constraintTop_toBottomOf="@id/acet_password" />

        <LinearLayout
            android:id="@+id/ll_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15sp"
            android:paddingBottom="64dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_info_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_help"
                android:fontFamily="@font/inter_regular"
                android:textSize="11sp"
                android:textAlignment="textEnd"
                android:textColor="@color/grey_150"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextView.Purple100.11sp.Bold"
                android:text="@string/recovery_account"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView.White.12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/silungkang_playground"
            android:fontFamily="@font/inter_light"
            android:textAlignment="center"
            android:paddingVertical="21dp"
            app:layout_constraintTop_toBottomOf="@id/ll_recovery"
            app:layout_constraintVertical_bias="1"
            android:background="@color/purple_100"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>