<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="14dp"
    tools:context=".presentation.feature.dashboard.DashboardActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aciv_logo"
        android:layout_width="115dp"
        android:layout_height="36dp"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_login"
        style="@style/Button.11sp.Regular"
        android:layout_width="64dp"
        android:layout_height="34dp"
        android:text="@string/login"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <id.rla.silungkangplayground.presentation.customview.RecyclerSliderView
        android:id="@+id/rv_slide_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_slider_event_dashboard"
        app:layout_constraintTop_toBottomOf="@id/aciv_logo"
        tools:itemCount="1"
        android:layout_marginTop="13dp"/>
    
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/acib_slide_left"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_slider_arrow_left"
        app:layout_constraintTop_toTopOf="@id/rv_slide_event"
        app:layout_constraintBottom_toBottomOf="@id/rv_slide_event"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/acib_slide_right"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_slider_arrow_right"
        app:layout_constraintTop_toTopOf="@id/rv_slide_event"
        app:layout_constraintBottom_toBottomOf="@id/rv_slide_event"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actv_creative_corner_info"
        style="@style/TextView.Purple100.13sp.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creative_corner"
        android:layout_marginTop="23dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_slide_event"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_creative_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:clipToPadding="false"
        tools:listitem="@layout/item_creative_corner_dashboard"
        tools:itemCount="1"
        app:layout_constraintTop_toBottomOf="@id/actv_creative_corner_info"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actv_play_info"
        style="@style/TextView.Purple100.13sp.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_play"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/actv_creative_corner_info"
        app:layout_constraintTop_toBottomOf="@id/rv_creative_corner"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:stretchColumns="*"
        android:layout_marginHorizontal="22dp"
        app:layout_constraintTop_toBottomOf="@id/actv_play_info">

        <TableRow
            android:weightSum="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                style="@style/PlayMenuCard"
                android:layout_width="match_parent"

                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_bag"
                        android:scaleType="fitCenter"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView.Purple100.10sp.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="6dp"
                        android:text="@string/school_visit"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/PlayMenuCard"
                android:layout_width="match_parent"

                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_bus"
                        android:scaleType="fitCenter"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView.Purple100.10sp.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:textAlignment="center"
                        android:text="@string/group_visit"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/PlayMenuCard"
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_facility"
                        android:scaleType="fitCenter"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView.Purple100.10sp.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="6dp"
                        android:letterSpacing="0.02"
                        android:text="@string/fasilitas"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                style="@style/PlayMenuCard"
                android:layout_width="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_horse"
                        android:scaleType="fitCenter"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView.Purple100.10sp.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="6dp"
                        android:text="@string/wahana"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/PlayMenuCard"
                android:layout_width="match_parent"

                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_comment"
                        android:scaleType="fitCenter"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView.Purple100.10sp.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:textAlignment="center"
                        android:text="@string/review"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </TableRow>

    </TableLayout>
    

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextView.White.12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/silungkang_playground"
        android:fontFamily="@font/inter_light"
        android:textAlignment="center"
        android:paddingVertical="21dp"
        android:background="@color/purple_100"/>



</androidx.constraintlayout.widget.ConstraintLayout>