<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:strokeWidth="0dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:contentPadding="10dp"
    app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="0dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aciv_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:src="@drawable/slide_1_dashboard"
                android:scaleType="centerCrop"/>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_title"
            style="@style/TextView.Purple100.13sp.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Tahfiz untuk anak"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcv_thumbnail"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_date"
            style="@style/TextView.Purple100.10sp.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/actv_title"
            app:layout_constraintStart_toStartOf="@id/actv_title"
            tools:text="@string/tanggal_awal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_time"
            style="@style/TextView.Purple100.10sp.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/actv_date"
            app:layout_constraintStart_toStartOf="@id/actv_date"
            tools:text="@string/tanggal_berakhir"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button.10sp.Medium"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:text="@string/daftar"
            app:layout_constraintTop_toBottomOf="@id/mcv_thumbnail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>